<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <!-- Tambahkan margin untuk jarak antara elemen-elemen -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tagline"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        android:gravity="center" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/bmart_pic" />


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="username/pengguna"
        android:hint="@string/username_Login"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="password/masuk"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" /> <!-- Atur margin bottom sesuai kebutuhan -->
    />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:layout_marginBottom="16dp"
        tools:ignore="VisualLintButtonSize"
        android:onClick="openMainActivity2"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:layout_marginBottom="16dp"
        android:onClick="openMainActivity2"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
