<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity2">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:elevation="4dp"
      android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
      app:layout_constraintTop_toTopOf="parent"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
      tools:layout_editor_absoluteX="0dp">

    <!-- Menggunakan RelativeLayout untuk mengatur tata letak elemen -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <!-- Menampilkan TextView untuk teks "Binus Mart" di tengah -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/binus_mart_logo"
          android:textStyle="bold"
          android:textColor="@android:color/white"
          android:textSize="24sp"
          android:layout_centerInParent="true" />
    </RelativeLayout>
  </androidx.appcompat.widget.Toolbar>


  <!-- Baris 1 -->
  <LinearLayout
      android:id="@+id/baris1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      app:layout_constraintTop_toBottomOf="@id/toolbar"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <!-- Image 1 -->
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/buku1"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/judul_buku1"
        tools:ignore="VisualLintBounds" />

    <!-- Info Produk 1 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

      <!-- Text View 1 (Nama Produk 1) -->
      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/buku_program_c"
          android:textSize="16sp" />

      <!-- Text View 1 (Harga Produk 1) -->
      <TextView
          android:id="@+id/hargaTextView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rp_100_000_harga1"
          android:textSize="16sp" />

      <!-- Tombol Beli Produk 1 -->
      <Button
          android:id="@+id/beliButton1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/beli_btn1"
          tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>
  </LinearLayout>

  <!-- Baris 2 -->
  <LinearLayout
      android:id="@+id/baris2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      app:layout_constraintTop_toBottomOf="@id/baris1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="10dp">

    <!-- Image 2 -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/buku2"
        android:contentDescription="@string/judul_buku2" />

    <!-- Info Produk 2 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

      <!-- Text View 2 (Nama Produk 2) -->
      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/buku_program_java"
          android:textSize="16sp" />

      <!-- Text View 2 (Harga Produk 2) -->
      <TextView
          android:id="@+id/hargaTextView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rp_120_000_harga2"
          android:textSize="16sp" />

      <!-- Tombol Beli Produk 2 -->
      <Button
          android:id="@+id/beliButton3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/beli_btn3"
          android:layout_marginTop="8dp" />
    </LinearLayout>
  </LinearLayout>

  <!-- Baris 3 -->
  <LinearLayout
      android:id="@+id/baris3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      app:layout_constraintTop_toBottomOf="@id/baris2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <!-- Image 3 -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/buku3"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/html"
        tools:ignore="VisualLintBounds" />

    <!-- Info Produk 3 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

      <!-- Text View 3 (Nama Produk 3) -->
      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/buku_program_html"
          android:textSize="16sp" />

      <!-- Text View 3 (Harga Produk 3) -->
      <TextView
          android:id="@+id/hargaTextView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rp_80_000_harga3"
          android:textSize="16sp" />

      <!-- Tombol Beli Produk 3 -->
      <Button
          android:id="@+id/beliButton3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/beli_btn3"
          android:layout_marginTop="8dp"
          tools:ignore="DuplicateIds" />
    </LinearLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
